force-app/main/default/objects/Product2/fields/Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Type__c</fullName>
    <label>Asset Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Module - Core</fullName>
            </value>
            <value>
                <fullName>Module - Additional</fullName>
            </value>
            <value>
                <fullName>Module - Integration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>