force-app/main/default/objects/Product2/fields/Available_Online__c.field-meta.xml
<CustomField>
    <fullName>Available_Online__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available Online</label>
    <type>Checkbox</type>
</CustomField>