force-app/main/default/objects/Product2/fields/Bundle_Key__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Key__c</fullName>
    <label>Bundle Key</label>
    <length>30</length>
    <type>Text</type>
</CustomField>