force-app/main/default/objects/Product2/fields/Do_Not_Create_Asset__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Create_Asset__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicator to create an asset or not CCRM-58</description>
    <label>Do Not Create Asset</label>
    <type>Checkbox</type>
</CustomField>