force-app/main/default/objects/Product2/fields/Enabled_by_Default__c.field-meta.xml
<CustomField>
    <fullName>Enabled_by_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enabled by Default</label>
    <type>Checkbox</type>
</CustomField>