force-app/main/default/objects/Product2/fields/ERP_Product_Number__c.field-meta.xml
<CustomField>
    <fullName>ERP_Product_Number__c</fullName>
    <label>ERP Product Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>