force-app/main/default/objects/Product2/fields/GL_Code__c.field-meta.xml
<CustomField>
    <fullName>GL_Code__c</fullName>
    <label>GL Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>