force-app/main/default/objects/Product2/fields/Implementation_Plan_Template__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Plan_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Implementation Plan Template</label>
    <referenceTo>Implementation_Plan_Template__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>