force-app/main/default/objects/Product2/fields/Implementation_Team__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Team__c</fullName>
    <description>Used to indicate the team responsible for implementation upon sale of the product</description>
    <label>Implementation Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GSS NA - AP Communications</fullName>
            </value>
            <value>
                <fullName>GSS NA - AP Installs</fullName>
            </value>
            <value>
                <fullName>GSS NA - New PIMS Onboarding</fullName>
            </value>
            <value>
                <fullName>GSS NA - Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>