force-app/main/default/objects/Product2/fields/Is_ERP_Product__c.field-meta.xml
<CustomField>
    <fullName>Is_ERP_Product__c</fullName>
    <description>CCRM-2106: this should be true if the Product does has an ERP Number associated to it</description>
    <formula>NOT(ISBLANK( ERP_Product_Number__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is ERP Product</label>
    <type>Checkbox</type>
</CustomField>