force-app/main/default/objects/Product2/fields/Is_PIMS_Cache__c.field-meta.xml
<CustomField>
    <fullName>Is_PIMS_Cache__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is PIMS Cache</label>
    <type>Checkbox</type>
</CustomField>