force-app/main/default/objects/Product2/fields/Manufacturer_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_Item_Number__c</fullName>
    <label>Manufacturer Item Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>