force-app/main/default/objects/Product2/fields/Mark_Up__c.field-meta.xml
<CustomField>
    <fullName>Mark_Up__c</fullName>
    <label>Mark Up</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>