force-app/main/default/objects/Product2/fields/Product_Class__c.field-meta.xml
<CustomField>
    <fullName>Product_Class__c</fullName>
    <label>Product Class</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Family</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adapter</fullName>
            </value>
            <value>
                <fullName>AVImark</fullName>
            </value>
            <value>
                <fullName>Backup System</fullName>
            </value>
            <value>
                <fullName>Battery Backup</fullName>
            </value>
            <value>
                <fullName>Cable</fullName>
            </value>
            <value>
                <fullName>CC Processing</fullName>
            </value>
            <value>
                <fullName>Component</fullName>
            </value>
            <value>
                <fullName>Computer</fullName>
            </value>
            <value>
                <fullName>Conversion</fullName>
            </value>
            <value>
                <fullName>Cubex</fullName>
            </value>
            <value>
                <fullName>Data Backup</fullName>
            </value>
            <value>
                <fullName>Desktop</fullName>
            </value>
            <value>
                <fullName>DICOM</fullName>
            </value>
            <value>
                <fullName>Dragonfly</fullName>
            </value>
            <value>
                <fullName>DVD Burner</fullName>
            </value>
            <value>
                <fullName>DVM</fullName>
            </value>
            <value>
                <fullName>eVetPractice</fullName>
            </value>
            <value>
                <fullName>Hard Drive</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>HealthyPet</fullName>
            </value>
            <value>
                <fullName>IDSS</fullName>
            </value>
            <value>
                <fullName>Impromed</fullName>
            </value>
            <value>
                <fullName>Installation</fullName>
            </value>
            <value>
                <fullName>IVLS</fullName>
            </value>
            <value>
                <fullName>Keyboard</fullName>
            </value>
            <value>
                <fullName>Lab</fullName>
            </value>
            <value>
                <fullName>Laptop</fullName>
            </value>
            <value>
                <fullName>License</fullName>
            </value>
            <value>
                <fullName>Memory</fullName>
            </value>
            <value>
                <fullName>Midmark</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>