force-app/main/default/objects/Product2/fields/Software_Support_Price__c.field-meta.xml
<CustomField>
    <fullName>Software_Support_Price__c</fullName>
    <label>Software Support Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>