force-app/main/default/objects/Product2/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Subscription is used to identify whether it is subscribed or not - CCRM-461</description>
    <label>Subscription</label>
    <type>Checkbox</type>
</CustomField>