force-app/main/default/objects/Product2/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type is a multi Picklist field with RxWorks, VisionVPM values - CCRM-461</description>
    <label>Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Line_of_Business__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RxWorks</fullName>
            </value>
            <value>
                <fullName>VisionVPM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>