force-app/main/default/objects/Product2/listViews/CO_Items.listView-meta.xml
<ListView>
    <fullName>CO_Items</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Line_of_Business__c</columns>
    <columns>Manufacturer__c</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Line_of_Business__c</field>
        <operation>equals</operation>
        <value>CO</value>
    </filters>
    <label>CO Products</label>
</ListView>