force-app/main/default/objects/Product2/listViews/EMEA_Items.listView-meta.xml
<ListView>
    <fullName>EMEA_Items</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Region__c</columns>
    <columns>Manufacturer__c</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Line_of_Business__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Region__c</field>
        <operation>equals</operation>
        <value>EMEA,All Regions</value>
    </filters>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>EMEA Products</label>
</ListView>