force-app/main/default/objects/Product2/listViews/Impromed_Bundle.listView-meta.xml
<ListView>
    <fullName>Impromed_Bundle</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>Bundle_Key__c</columns>
    <columns>PRODUCT2.RECORD_TYPE</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Bundle_Key__c</field>
        <operation>equals</operation>
        <value>SW1005</value>
    </filters>
    <filters>
        <field>PRODUCT2.CUSTOMER_PRODUCT_ID</field>
        <operation>equals</operation>
        <value>SW1005</value>
    </filters>
    <label>Impromed Bundle</label>
    <sharedTo>
        <roleAndSubordinates>NA_Leader</roleAndSubordinates>
    </sharedTo>
</ListView>